modify about, team page

--- a/about/index.html
+++ b/about/index.html
@@ -7,11 +7,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>About | Takizawa Hackathon // 滝沢市のハッカソンコミュニティ</title>
   <meta name="keyword" content="TakizawaHachathon,滝沢ハッカソン,ハッカソン,岩手IT,学生">
-  <meta name=”description” content=”Takizawa Hackathonは岩手の学生が主役のハッカソンコミュニティです。普段、作業を共にしない仲間とチームを組みものづくりすることで、新しいスキルや刺激を得るための機会として、ver.3を2017/08/05（土）、08/06（日）の2日間、開催します。” />
+  <meta name=”description” content=”Takizawa Hackathonは岩手の学生が主役のハッカソンコミュニティです。” />
 
 
   <meta property="og:title" content="About | Takizawa Hackathon // 滝沢市のハッカソンコミュニティ" />
-  <meta property="og:description" content="Takizawa Hackathonは岩手の学生が主役のハッカソンコミュニティです。普段、作業を共にしない仲間とチームを組みものづくりすることで、新しいスキルや刺激を得るための機会として、ver.3を2017/08/05（土）、08/06（日）の2日間、開催します。" />
+  <meta property="og:description" content="Takizawa Hackathonは岩手の学生が主役のハッカソンコミュニティです。" />
   <meta property="og:type" content="article" />
   <meta property="og:url" content="https://takizawa-hackathon.github.io/about" />
   <meta property="og:image" content="https://takizawa-hackathon.github.io/img/og_image.png" />
@@ -113,7 +113,6 @@
               <li><a href="/">HOME</a></li>
               <li><a href="/about/">ABOUT</a></li>
               <li><a href="/team/">TEAM</a></li>
-              <li><a href="https://forms.gle/KAVv57BbXpNV7cmY9">参戦する</a></li>
             </ul>
           </div>
           <!-- /.navbar-collapse -->
@@ -265,7 +264,7 @@
                         </li>
                         <li>
                           <p class="time-line-event-comment">
-                            <strong>開催場所</strong><br> 岩手県立大学滝沢キャンパス構内(予定)
+                            <strong>開催場所</strong><br> 滝沢市IPU第2イノベーションセンター
                           </p>
                         </li>
                         <li>
@@ -297,7 +296,7 @@
                         </li>
                         <li>
                           <p class="time-line-event-comment">
-                            <strong>開催場所</strong><br> 岩手県立大学滝沢キャンパス構内(予定)
+                            <strong>開催場所</strong><br> 滝沢市IPU第2イノベーションセンター
                           </p>
                         </li>
                         <li>
@@ -329,7 +328,7 @@
                         </li>
                         <li>
                           <p class="time-line-event-comment">
-                            <strong>開催場所</strong><br> 岩手県立大学滝沢キャンパス構内(予定)
+                            <strong>開催場所</strong><br> 滝沢市IPU第2イノベーションセンター
                           </p>
                         </li>
                         <li>
@@ -345,6 +344,38 @@
                         <li>
                           <p class="time-line-event-comment">
                             <strong><a href="/tracks/ver3.html">Ver.3のホームページ<i class="fa fa-external-link" aria-hidden="true"></i></a></strong><br>
+                          </p>
+                        </li>
+                      </ul>
+                    </div>
+                  </div>
+                </li>
+                <li class="timeline-event">
+                  <label class="timeline-event-icon"></label>
+                  <div class="timeline-event-copy">
+                    <p class="timeline-event-thumbnail">2017/11/11</p>
+                    <h3>Takizawa Hackathon ver.4を開催</h3>
+                    <h4>第4回目となるハッカソンイベントを開催しました。</h4>
+                    <div class="time-line-info-list">
+                      <ul>
+                        <li>
+                          <p class="time-line-event-comment">
+                            <strong>テーマ</strong><br> デート x ○○
+                          </p>
+                        </li>
+                        <li>
+                          <p class="time-line-event-comment">
+                            <strong>開催場所</strong><br> 滝沢市IPU第2イノベーションセンター
+                          </p>
+                        </li>
+                        <li>
+                          <p class="time-line-event-comment">
+                            <strong>参加人数</strong><br> 15名
+                          </p>
+                        </li>
+                        <li>
+                          <p class="time-line-event-comment">
+                            <strong><a href="https://takizawahackathon.connpass.com/event/68601/">connpassイベントページ<i class="fa fa-external-link" aria-hidden="true"></i></a></strong><br>
                           </p>
                         </li>
                       </ul>
