--- a/team/index.html
+++ b/team/index.html
@@ -136,45 +136,56 @@
 
       <div class="container our-team">
         <div class="row">
-          <div class="col-xs-12 col-sm-6 col-lg-4">
+          <div class="col-xs-12 col-sm-6 col-lg-3">
             <div class="at-user">
               <div class="at-user__avatar"><img src="/img/t-sasaki.jpg"/></div>
               <div class="at-user__name">Tomohiro Sasaki</div>
               <div class="at-user__name_jp">佐々木 知洋</div>
-              <ul class="at-social">
-                <li class="at-social__item"><a href="https://www.facebook.com/profile.php?id=100006862331153" target="_blank">
-                    <svg viewBox="0 0 24 24" width="18" height="18" xmlns="http://www.w3.org/2000/svg">
-                      <path d="M14 9h3l-.375 3H14v9h-3.89v-9H8V9h2.11V6.984c0-1.312.327-2.304.984-2.976C11.75 3.336 12.844 3 14.375 3H17v3h-1.594c-.594 0-.976.094-1.148.281-.172.188-.258.5-.258.938V9z" fill-rule="evenodd"></path>
-                    </svg></a></li>
-              </ul>
+              <div class="at-user__bio">
+                xxxx年に岩手県立大学を卒業後、サイバーエージェントに新卒で入社。
+                xxxxに3年半携わった後に、xxxx事業に異動。
+                現在はxxxxにてxxxx職に従事。
+                趣味は、xxxx、xxxx、xxxx。
+              </div>
             </div>
           </div>
-          <div class="col-xs-12 col-sm-6 col-lg-4">
+          <div class="col-xs-12 col-sm-6 col-lg-3">
             <div class="at-user">
               <div class="at-user__avatar"><img src="/img/r-konno.jpg"/></div>
               <div class="at-user__name">Ryota Konno</div>
               <div class="at-user__name_jp">今野 遼太</div>
-              <ul class="at-social">
-                <li class="at-social__item"><a href="https://www.facebook.com/rkonno" target="_blank">
-                    <svg viewBox="0 0 24 24" width="18" height="18" xmlns="http://www.w3.org/2000/svg">
-                      <path d="M14 9h3l-.375 3H14v9h-3.89v-9H8V9h2.11V6.984c0-1.312.327-2.304.984-2.976C11.75 3.336 12.844 3 14.375 3H17v3h-1.594c-.594 0-.976.094-1.148.281-.172.188-.258.5-.258.938V9z" fill-rule="evenodd"></path>
-                    </svg></a></li>
-                <li class="at-social__item"><a href="https://twitter.com/azuno_mix" target="_blank">
-                    <svg viewBox="0 0 24 24" width="18" height="18" xmlns="http://www.w3.org/2000/svg">
-                      <path d="M20.875 7.5v.563c0 3.28-1.18 6.257-3.54 8.93C14.978 19.663 11.845 21 7.938 21c-2.5 0-4.812-.687-6.937-2.063.5.063.86.094 1.078.094 2.094 0 3.969-.656 5.625-1.968a4.563 4.563 0 0 1-2.625-.915 4.294 4.294 0 0 1-1.594-2.226c.375.062.657.094.844.094.313 0 .719-.063 1.219-.188-1.031-.219-1.899-.742-2.602-1.57a4.32 4.32 0 0 1-1.054-2.883c.687.328 1.375.516 2.062.516C2.61 9.016 1.938 7.75 1.938 6.094c0-.782.203-1.531.609-2.25 2.406 2.969 5.515 4.547 9.328 4.734-.063-.219-.094-.562-.094-1.031 0-1.281.438-2.36 1.313-3.234C13.969 3.437 15.047 3 16.328 3s2.375.484 3.281 1.453c.938-.156 1.907-.531 2.907-1.125-.313 1.094-.985 1.938-2.016 2.531.969-.093 1.844-.328 2.625-.703-.563.875-1.312 1.656-2.25 2.344z" fill-rule="evenodd"></path>
-                    </svg></a></li>
-              </ul>
+              <div class="at-user__bio">
+                2018年に岩手県立大学を卒業後、サイボウズに新卒で入社。
+                モバイルエンジニアとして5年ほどグループウェア事業のプロダクト開発に携わる。
+                現在は同事業のプロダクトマネジメント職として従事。
+                趣味は、ドライブ、キャンプ、コーヒー。
+              </div>
             </div>
           </div>
-          <div class="col-xs-12 col-sm-6 col-lg-4">
+          <div class="col-xs-12 col-sm-6 col-lg-3">
             <div class="at-user">
               <div class="at-user__avatar"><img src="/img/smile.png"/></div>
-              <div class="at-user__name">And you...</div>
-              <div class="at-user__name_jp">あなたも！</div>
-              <ul class="at-social">
-                <li class="at-social__item"></li>
-                <li class="at-social__item"></li>
-              </ul>
+              <div class="at-user__name">Hiromasa Kamada</div>
+              <div class="at-user__name_jp">鎌田 啓雅</div>
+              <div class="at-user__bio">
+                xxxx年に岩手県立大学を卒業後、xxxxに新卒で入社。
+                xxxxに3年半携わった後に、xxxx事業に異動。
+                現在はxxxxにてxxxx職に従事。
+                趣味は、xxxx、xxxx、xxxx。
+              </div>
+            </div>
+          </div>
+          <div class="col-xs-12 col-sm-6 col-lg-3">
+            <div class="at-user">
+              <div class="at-user__avatar"><img src="/img/smile.png"/></div>
+              <div class="at-user__name">Yuto Sato</div>
+              <div class="at-user__name_jp">佐藤 佑哉</div>
+              <div class="at-user__bio">
+                xxxx年に岩手県立大学を卒業後、xxxxに新卒で入社。
+                xxxxに3年半携わった後に、xxxx事業に異動。
+                現在はxxxxにてxxxx職に従事。
+                趣味は、xxxx、xxxx、xxxx。
+              </div>
             </div>
           </div>
         </div>
