add participant-feedback section

--- a/index.html
+++ b/index.html
@@ -404,7 +404,32 @@
     </section>
     <!-- section-entry -->
 
-    <section id="section-locus" class="section-wrapper gray-bg">
+    <section id="section-participant-feedback-position" class="section-wrapper section-participant-feedback-position gray-bg">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-12">
+            <div class="section-title">
+              <h1>参加者の声</h1>
+            </div>
+          </div>
+        </div>
+
+        <div class="row">
+          <div class="col-sm-6 col-md-4">
+            <iframe class="note-embed" src="https://note.com/embed/notes/n891c81a4117b" style="border: 0; display: block; max-width: 99%; width: 494px; padding: 0px; margin: 10px 0px; position: static; visibility: visible;" height="400"></iframe><script async src="https://note.com/scripts/embed.js" charset="utf-8"></script>
+          </div>
+          <div class="col-sm-6 col-md-4">
+            <iframe class="note-embed" src="https://note.com/embed/notes/nf23e18f50055" style="border: 0; display: block; max-width: 99%; width: 494px; padding: 0px; margin: 10px 0px; position: static; visibility: visible;" height="400"></iframe><script async src="https://note.com/scripts/embed.js" charset="utf-8"></script>
+          </div>
+          <div class="col-sm-6 col-md-4">
+            <iframe class="note-embed" src="https://note.com/embed/notes/n7f51d4c602ee" style="border: 0; display: block; max-width: 99%; width: 494px; padding: 0px; margin: 10px 0px; position: static; visibility: visible;" height="400"></iframe><script async src="https://note.com/scripts/embed.js" charset="utf-8"></script>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- section-team-position -->
+
+    <section id="section-locus" class="section-wrapper">
       <div class="container">
         <div class="row">
           <div class="col-md-12">
