--- a/team/index.html
+++ b/team/index.html
@@ -196,7 +196,7 @@
       <div class="copyright-section">
         <div class="container">
           <div class="col-md-12">
-            <div class="copytext text-center">&copy; 2017 Takizawa Hackathon 実行委員会 | Design by <a href="https://uicookies.com">uiCookies</a> and modify by <a href="https://github.com/rkonno">rkonno</a></div>
+            <div class="copytext text-center">&copy; 2023 滝沢ハッカソン運営委員会 | Design by <a href="https://uicookies.com">uiCookies</a> and modify by <a href="https://github.com/rkonno">rkonno</a></div>
           </div>
         </div>
         <!-- .container -->
