--- a/team/index.html
+++ b/team/index.html
@@ -138,14 +138,13 @@
         <div class="row">
           <div class="col-xs-12 col-sm-6 col-lg-3">
             <div class="at-user">
-              <div class="at-user__avatar"><img src="/img/t-sasaki.jpg"/></div>
+              <div class="at-user__avatar"><img src="/img/t-sasaki.jpeg"/></div>
               <div class="at-user__name">Tomohiro Sasaki</div>
               <div class="at-user__name_jp">佐々木 知洋</div>
               <div class="at-user__bio">
-                xxxx年に岩手県立大学を卒業後、サイバーエージェントに新卒で入社。
-                xxxxに3年半携わった後に、xxxx事業に異動。
-                現在はxxxxにてxxxx職に従事。
-                趣味は、xxxx、xxxx、xxxx。
+                2020年に岩手県立大学を卒業後、株式会社サイバーエージェントに新卒で入社。 
+                Android・Flutterエンジニアとして既存・新規サービス開発に従事。
+                趣味は、ドライブ、映画鑑賞。
               </div>
             </div>
           </div>
@@ -164,27 +163,27 @@
           </div>
           <div class="col-xs-12 col-sm-6 col-lg-3">
             <div class="at-user">
-              <div class="at-user__avatar"><img src="/img/smile.png"/></div>
+              <div class="at-user__avatar"><img src="/img/h-kamada.jpeg"/></div>
               <div class="at-user__name">Hiromasa Kamada</div>
               <div class="at-user__name_jp">鎌田 啓雅</div>
               <div class="at-user__bio">
-                xxxx年に岩手県立大学を卒業後、xxxxに新卒で入社。
-                xxxxに3年半携わった後に、xxxx事業に異動。
-                現在はxxxxにてxxxx職に従事。
-                趣味は、xxxx、xxxx、xxxx。
+                2017年に岩手県立大学を卒業後、株式会社オズビジョンに新卒で入社。 SREチームに配属、AWS運営などインフラ周りの業務を担当。
+                2年目からは自社サービスのフロントやAPI、ネイティブアプリの作成・改修に従事。
+                現在はフリーランスとして働く一方で、「教育課題の解決」を目的に仲間と創業した会社にてCTOを兼務。
+                趣味はキャンプ、コーヒー。
               </div>
             </div>
           </div>
           <div class="col-xs-12 col-sm-6 col-lg-3">
             <div class="at-user">
-              <div class="at-user__avatar"><img src="/img/smile.png"/></div>
+              <div class="at-user__avatar"><img src="/img/y-sato.jpg"/></div>
               <div class="at-user__name">Yuto Sato</div>
               <div class="at-user__name_jp">佐藤 佑哉</div>
               <div class="at-user__bio">
-                xxxx年に岩手県立大学を卒業後、xxxxに新卒で入社。
-                xxxxに3年半携わった後に、xxxx事業に異動。
-                現在はxxxxにてxxxx職に従事。
-                趣味は、xxxx、xxxx、xxxx。
+                2021年に岩手県立大学に入学し、現在は3年生。
+                FlutterとKotlinなどのモバイルファーストな技術に触れて活動中。
+                現在は東北TECH道場にてAndroidモバイルアプリ団体を運営している。
+                趣味は、筋トレ、カラオケ、食べること。
               </div>
             </div>
           </div>
