modify team page style, etc.

--- a/index.html
+++ b/index.html
@@ -170,11 +170,11 @@
               Ver.5のテーマは<strong>「滝沢・盛岡の観光を盛り上げる！」</strong>。ニューヨーク・タイムズ紙「2023年に行くべき52カ所」に「盛岡市」が選ばれたのは記憶に新しい。一過性で終わらせず、2024年も滝沢・盛岡を盛り上げるためのサービスをゼロから作り出そう！
             </p>
           </div>
-          <div class="col-md-4">
+          <div class="col-md-4 about-event-info">
             <address>
               <strong>Takizawa Hackathon Ver.5</strong><br>
               日時：2023/12/9-10<br>
-              場所：岩手県立大学滝沢キャンパス構内(予定)<br>
+              場所：岩手県立大学 滝沢キャンパス<br>　　　ソフトウェア情報学部A棟 201<br>
               <div class="google-map-button">
                 <a class="google-map-link" href="https://maps.app.goo.gl/HXQWzLkpSJdKVAhY9"><i class="fa fa-map-marker"
                     aria-hidden="true"></i>Google Map</a>
