--- a/team/index.html
+++ b/team/index.html
@@ -177,7 +177,7 @@
           <div class="col-xs-12 col-sm-6 col-lg-3">
             <div class="at-user">
               <div class="at-user__avatar"><img src="/img/y-sato.jpg"/></div>
-              <div class="at-user__name">Yuto Sato</div>
+              <div class="at-user__name">Yuya Sato</div>
               <div class="at-user__name_jp">佐藤 佑哉</div>
               <div class="at-user__bio">
                 2021年に岩手県立大学に入学し、現在は3年生。
