add faq section

--- a/index.html
+++ b/index.html
@@ -427,9 +427,90 @@
         </div>
       </div>
     </section>
-    <!-- section-team-position -->
+    <!-- section-participant-feedback-position -->
 
-    <section id="section-locus" class="section-wrapper">
+    <section id="section-faq-position" class="section-wrapper section-participant-feedback-position">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-12">
+            <div class="section-title">
+              <h1>よくある質問</h1>
+            </div>
+          </div>
+        </div>
+        <div class="section-faq">
+          <ol>
+            <li>
+              <p class="section-faq-question">ハッカソン未経験だと参加は難しいですか？</p>
+              <p class="section-faq-answer">A. ハッカソン未経験の方も大歓迎です！</p>
+              <span>
+                周りの参加者と助け合ったり、メンターのサポートを受けることができます。
+                Takizawa Hackathonはものづくりに興味のある学生間の交流の場を作るために立ち上がりました。
+                集まった仲間とチームを立ち上げ、目的を共有し、サービスをゼロから作るイベントです。
+                ハッカソン未経験で参加を悩まれている方にも、ぜひこの機会にエントリーいただければと思います！
+              </span>
+            </li>
+            <li>
+              <p>開発経験がないのですが、参加したら迷惑になりませんか？</p>
+              <p class="section-faq-answer">A. 開発未経験者でも全く問題ありません！</p>
+              <span>
+                個人でエントリーする場合でもエントリー時に提出してもらった技術力アンケートを基にチーム分けを行います。また、社会人メンターとして現役エンジニアが各チームをサポートします！
+              </span>
+            </li>
+            <li>
+              <p>サービス開発が初めてのため企画づくりが不安です。どうすれば良いでしょうか？</p>
+              <p class="section-faq-answer">A. 企画づくりからサポートします！</p>
+              <span>
+                ハッカソンでは、「何を作れば良いだろうか」とアイデア発想や企画づくりの段階で時間がかかってしまうことがあります。
+                今回の Takizawa Hackathon では、スポンサー企業のメンターによる「実際の現場で行われている企画の進め方」をレクチャーする時間を設ける予定です。
+              </span>
+            </li>
+            <li>
+              <p>エンジニア以外でも参加できますか？</p>
+              <p class="section-faq-answer">A. もちろん大歓迎です！</p>
+              <span>
+                参加要件は「学生であること」のみで、学部や文系・理系は問いません。
+              </span>
+            </li>
+            <li>
+              <p>個人でもエントリーは可能ですか？</p>
+              <p class="section-faq-answer">A. はい、可能です。</p>
+              <span>
+                個人エントリーの場合は、個人での本エントリーにてご記入いただいたアンケート情報から、運営事務局が個人参加者同士のチームを編成します。
+              </span>
+            </li>
+            <li>
+              <p>遠方から参加する場合はどうしたら良いですか？</p>
+              <p class="section-faq-answer">A. 遠方からの参加もサポートします。</p>
+              <span>
+                岩手県立大学のゲストハウスをご利用いただけます（人数制限あり）。
+                まずはお気軽にご相談ください！
+              </span>
+            </li>
+            <li>
+              <p>スタッフやメンターはどんな人たちがいるのですか？</p>
+              <p class="section-faq-answer">A. 全員が岩手県立大学出身です。</p>
+              <span>
+                IT企業で働くエンジニアや現役学生で構成されています。
+                学生の皆さんに「チーム開発や、プロダクト開発を楽しんでもらいたい！」という思いで集まっているメンバーですので、ぜひ当日は技術的な質問はもちろん、
+                普段の仕事の話や就活のことなど気になることを気軽に相談してみてください！
+              </span>
+            </li>
+            <li>
+              <p>2017年ぶりの開催とのことですが、どういった雰囲気のイベントですか？</p>
+              <p class="section-faq-answer">A. 和気あいあいとした雰囲気の中で、ものづくりを楽しめるイベントです！</p>
+              <span>
+                「ハッカソンイベントに参加するのが初めて」という参加者も多く、初めてのハッカソンでも安心して参加いただけます。<br/>
+                過去の開催の様子は、<a href="https://www.flickr.com/photos/157754753@N02/albums/72177720312765208">こちら</a> からご覧ください！
+              </span>
+            </li>
+          </ol>
+        </div>
+      </div>
+    </section>
+    <!-- section-faq-position -->
+
+    <section id="section-locus" class="section-wrapper gray-bg">
       <div class="container">
         <div class="row">
           <div class="col-md-12">
