add header link for faq

--- a/index.html
+++ b/index.html
@@ -117,6 +117,7 @@
           <div class="collapse navbar-collapse navbar-right navbar-main-collapse">
             <ul class="nav navbar-nav">
               <li><a href="/">HOME</a></li>
+              <li><a href="/#section-faq-position">初めて参加される方へ</a></li>
               <li><a href="/about/">ABOUT</a></li>
               <li><a href="/team/">TEAM</a></li>
             </ul>
@@ -429,12 +430,15 @@
     </section>
     <!-- section-participant-feedback-position -->
 
-    <section id="section-faq-position" class="section-wrapper section-participant-feedback-position">
+    <section id="section-faq-position" class="section-wrapper section-faq-position">
       <div class="container">
         <div class="row">
           <div class="col-md-12">
             <div class="section-title">
               <h1>よくある質問</h1>
+            </div>
+            <div class="section-message">
+              <p>初めて参加される方から、よくいただいている質問にお答えします。</p>
             </div>
           </div>
         </div>
