modify faq message

--- a/index.html
+++ b/index.html
@@ -438,7 +438,7 @@
               <h1>よくある質問</h1>
             </div>
             <div class="section-message">
-              <p>初めて参加される方から、よくいただいている質問にお答えします。</p>
+              <p>初めて参加される方からよくいただいている質問にお答えします。</p>
             </div>
           </div>
         </div>
