modify faq answer

--- a/index.html
+++ b/index.html
@@ -466,7 +466,7 @@
               <p class="section-faq-answer">A. 企画づくりからサポートします！</p>
               <span>
                 ハッカソンでは、「何を作れば良いだろうか」とアイデア発想や企画づくりの段階で時間がかかってしまうことがあります。
-                今回の Takizawa Hackathon では、スポンサー企業のメンターによる「実際の現場で行われている企画の進め方」をレクチャーする時間を設ける予定です。
+                Takizawa Hackathonでは、企画が不安な方にも安心して参加できるように、アイディア出しの段階で悩んでいるチームにはメンターが相談に乗ったり、アドバイスを受けたりすることができます。安心してご参加ください。
               </span>
             </li>
             <li>
