--- a/index.html
+++ b/index.html
@@ -294,58 +294,82 @@
     </section>
     <!-- section-team-position -->
 
-    <!-- <section id="section-th-appeal" class="section-wrapper ection-th-appeal gray-bg">
+    <section id="section-sponsors-position" class="section-wrapper client-logo gray-bg">
       <div class="container">
-        <div class="row">
-          <div class="col-md-12">
-            <div class="section-title">
-              <h1>今回のハッカソンの魅力</h1>
-            </div>
+          <div class="row">
+              <div class="col-md-12">
+                  <div class="section-title">
+                      <h1>スポンサー</h1>
+                  </div>
+              </div>
           </div>
-        </div>
-
-        <div class="row">
-          <div class="col-sm-6 col-md-4">
-            <div class="omni-card">
-              <div class="circle-image">
-                <div class="circle-image-wrapper">
-                  <img src="/img/th-appeal/chanto_neru.png" alt="Ozvision社のロゴ">
+          <div class="section-sponsor">
+            <div class="row">
+                <div class="col-sm-6 col-md-4 sponsor-card">
+                  <a target="_blank" rel="noopener noreferrer" href="https://www.cyberagent.co.jp/">
+                    <picture class="sponsor-picture">
+                      <img src="./img/sponsor_image_sample.png" alt="sponsor image">
+                    </picture>
+                  </a>
+                  <div class="sponsor-link">
+                    <a target="_blank" rel="noopener noreferrer" href="https://www.cyberagent.co.jp/">株式会社サイバーエージェント</a>
+                  </div>
                 </div>
-              </div>
-              <div class="description">
-                <h3>しっかり寝れるハッカソン</h3>
-                <div class="description-accordion-container">
-                  <p>「ハッカソンは寝ないで開発！」という常識にとらわれず、今回はしっかり寝るということをグランドルールにしました。</p>
+                <div class="col-sm-6 col-md-4 sponsor-card">
+                  <a target="_blank" rel="noopener noreferrer" href="https://pascalia.co.jp/">
+                    <picture class="sponsor-picture">
+                      <img src="./img/sponsor_image_sample.png" alt="sponsor image">
+                    </picture>
+                  </a>
+                  <div class="sponsor-link">
+                    <a target="_blank" rel="noopener noreferrer" href="https://pascalia.co.jp/">パスカリアグループ</a>
+                  </div>
                 </div>
-              </div>
+                <div class="col-sm-6 col-md-4 sponsor-card">
+                  <a target="_blank" rel="noopener noreferrer" href="https://nowmo.jp/">
+                    <picture class="sponsor-picture">
+                      <img src="./img/sponsor_image_sample.png" alt="sponsor image">
+                    </picture>
+                  </a>
+                  <div class="sponsor-link">
+                    <a target="_blank" rel="noopener noreferrer" href="https://nowmo.jp/">株式会社NOWMO</a>
+                  </div>
+                </div>
+                <div class="col-sm-6 col-md-4 sponsor-card">
+                  <a target="_blank" rel="noopener noreferrer" href="https://github.com/yurue">
+                    <picture class="sponsor-picture picture-small">
+                      <img src="./img/sponsor/yurue-logo-dog-vertical.svg" alt="sponsor image">
+                    </picture>
+                  </a>
+                  <div class="sponsor-link">
+                    <a target="_blank" rel="noopener noreferrer" href="https://github.com/yurue">チームyurue</a>
+                  </div>
+                </div>
             </div>
           </div>
-          <div class="col-sm-6 col-md-4">
-            <div class="omni-card">
-              <div class="circle-image">
-                <img src="/img/th-appeal/meeting.png" alt="審議中のイメージ画像">
-              </div>
-              <div class="description">
-                <h3>参加者全員で審査しあう</h3>
-                <p>Ver.3と同様、みんなで審査しあうシステムです。どのチームのプロダクトが一番刺さったか、その一票が結果に大きく響きます！</p>
-              </div>
-            </div>
-          </div>
-          <div class="col-sm-6 col-md-4">
-            <div class="omni-card">
-              <div class="circle-image">
-                <img src="/img/th-appeal/motivation.png" alt="継続的なモチベーションのイメージ画像">
-              </div>
-              <div class="description">
-                <h3>継続的に創り続けられる</h3>
-                <p>ハッカソン後でも、「これは実際にリリースしたい！」という思いがあれば、運営チームがアドバイザーとなりサポートします。</p>
+          <div class="section-hall">
+            <div class="row">
+              <div class="col-md-12">
+                <div class="section-title">
+                  <h1>会場提供</h1>
+                </div>
+                <div class="hall-card">
+                  <a target="_blank" rel="noopener noreferrer" href="https://www.iwate-pu.ac.jp/">
+                    <picture class="hall-picture">
+                      <img src="./img/sponsor_image_sample.png" alt="hall image">
+                    </picture>
+                  </a>
+                  <div class="sponsor-link">
+                    <a target="_blank" rel="noopener noreferrer" href="https://www.iwate-pu.ac.jp/">公立大学法人 岩手県立大学</a>
+                  </div>
+                </div>
               </div>
             </div>
           </div>
         </div>
       </div>
-    </section> -->
-    <!-- section-team-position -->
+  </section>
+  <!-- section-sponsors-position -->
 
     <section id="section-entry" class="section-wrapper">
       <div class="container">
