ブラウザキャッシュ対策にハッシュ値を追加

--- a/team/index.html
+++ b/team/index.html
@@ -87,7 +87,7 @@
     <link href="/css/style.css?20170719" rel="stylesheet" />
     <link href="/css/customize.css" rel="stylesheet" />
     <link href="/css/simple_page.css" rel="stylesheet" />
-    <link href="/css/team_profile.css" rel="stylesheet" />
+    <link href="/css/team_profile.css?202311191800" rel="stylesheet" />
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
