add sponsor logo images, etc

--- a/index.html
+++ b/index.html
@@ -327,8 +327,8 @@
                 </div>
                 <div class="col-sm-6 col-md-4 sponsor-card">
                   <a target="_blank" rel="noopener noreferrer" href="https://nowmo.jp/">
-                    <picture class="sponsor-picture">
-                      <img src="./img/sponsor_image_sample.png" alt="sponsor image">
+                    <picture class="sponsor-picture picture-small">
+                      <img src="./img/sponsor/logo-nowmo.jpeg" alt="sponsor image">
                     </picture>
                   </a>
                   <div class="sponsor-link">
@@ -338,7 +338,7 @@
                 <div class="col-sm-6 col-md-4 sponsor-card">
                   <a target="_blank" rel="noopener noreferrer" href="https://github.com/yurue">
                     <picture class="sponsor-picture picture-small">
-                      <img src="./img/sponsor/yurue-logo-dog-vertical.svg" alt="sponsor image">
+                      <img src="./img/sponsor/logo-yurue.svg" alt="sponsor image">
                     </picture>
                   </a>
                   <div class="sponsor-link">
@@ -347,16 +347,16 @@
                 </div>
             </div>
           </div>
-          <div class="section-hall">
+          <div class="section-sponsor section-venue">
             <div class="row">
               <div class="col-md-12">
                 <div class="section-title">
                   <h1>会場提供</h1>
                 </div>
-                <div class="hall-card">
+                <div class="sponsor-card venue-card">
                   <a target="_blank" rel="noopener noreferrer" href="https://www.iwate-pu.ac.jp/">
-                    <picture class="hall-picture">
-                      <img src="./img/sponsor_image_sample.png" alt="hall image">
+                    <picture class="sponsor-picture picture-small">
+                      <img src="./img/sponsor/logo-iwate-pu.png" alt="venue image">
                     </picture>
                   </a>
                   <div class="sponsor-link">
