--- a/index.html
+++ b/index.html
@@ -318,7 +318,7 @@
             <div class="col-sm-6 col-md-4 sponsor-card">
               <a target="_blank" rel="noopener noreferrer" href="https://pascalia.co.jp/">
                 <picture class="sponsor-picture">
-                  <img src="./img/sponsor_image_sample.png" alt="sponsor image">
+                  <img src="./img/sponsor/logo-pascaliagroup.jpg" alt="sponsor image">
                 </picture>
               </a>
               <div class="sponsor-link">
