modify sponsor logo size

--- a/index.html
+++ b/index.html
@@ -317,7 +317,7 @@
             </div>
             <div class="col-sm-6 col-md-4 sponsor-card">
               <a target="_blank" rel="noopener noreferrer" href="https://pascalia.co.jp/">
-                <picture class="sponsor-picture">
+                <picture class="sponsor-picture picture-medium">
                   <img src="./img/sponsor/logo-pascaliagroup.jpg" alt="sponsor image">
                 </picture>
               </a>
