add sponsor logo image

--- a/index.html
+++ b/index.html
@@ -307,8 +307,8 @@
           <div class="row">
             <div class="col-sm-6 col-md-4 sponsor-card">
               <a target="_blank" rel="noopener noreferrer" href="https://www.cyberagent.co.jp/">
-                <picture class="sponsor-picture">
-                  <img src="./img/sponsor_image_sample.png" alt="sponsor image">
+                <picture class="sponsor-picture picture-small">
+                  <img src="./img/sponsor/logo-cyberagent.png" alt="sponsor image">
                 </picture>
               </a>
               <div class="sponsor-link">
