add link to pivacy policy in footer, etc.

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-VQK7SF1LM4"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
+    function gtag() { dataLayer.push(arguments); }
     gtag('js', new Date());
 
     gtag('config', 'G-VQK7SF1LM4');
@@ -590,19 +590,21 @@
   </section>
   <!-- section-locus -->
 
-
   <footer class="footer">
-    <div class="copyright-section">
-      <div class="container">
-        <div class="col-md-12">
-          <div class="copytext text-center">&copy; 2023 滝沢ハッカソン運営委員会 | Design by <a
-              href="https://uicookies.com">uiCookies</a> and modify by <a href="https://github.com/rkonno">rkonno</a>
+    <div class="container-fluid">
+      <div class="links-section">
+          <a href="/privacy/">プライバシーポリシー</a>
+        </div>
+        <!-- .links-section -->
+        <div class="copyright-section">
+          <div class="copytext">
+            &copy; 2023 滝沢ハッカソン運営委員会 | Design by <a href="https://uicookies.com">uiCookies</a> and modify by <a
+              href="https://github.com/rkonno">rkonno</a>
           </div>
         </div>
+        <!-- .copyright-section -->
       </div>
-      <!-- .container -->
     </div>
-    <!-- .copyright-section -->
   </footer>
   <!-- .footer -->
 
