--- a/tracks/ver3.html
+++ b/tracks/ver3.html
@@ -38,7 +38,7 @@
   <link rel="stylesheet" type="text/css" href="https://cdn.mlkcca.com/chatsupport.min.css" />
 
   <!-- Style CSS -->
-  <link href="/css/style.css?20170719" rel="stylesheet" />
+  <link href="/css/style.css?202401052343" rel="stylesheet" />
   <link href="/css/customize.css" rel="stylesheet" />
   <link href="/css/top.css?20170725" rel="stylesheet" />
 
@@ -619,20 +619,23 @@
     </section>
     <!-- section-locus -->
 
-
     <footer class="footer">
-      <div class="copyright-section">
-        <div class="container">
-          <div class="col-md-12">
-            <div class="copytext text-center">&copy; 2017 Takizawa Hackathon 実行委員会 | Design by <a href="https://uicookies.com">uiCookies</a> and modify by <a href="https://github.com/rkonno">rkonno</a></div>
+      <div class="container-fluid">
+        <div class="links-section">
+            <a href="/privacy/">プライバシーポリシー</a>
           </div>
+          <!-- .links-section -->
+          <div class="copyright-section">
+            <div class="copytext">
+              &copy; 2023 滝沢ハッカソン運営委員会 | Design by <a href="https://uicookies.com">uiCookies</a> and modify by <a
+                href="https://github.com/rkonno">rkonno</a>
+            </div>
+          </div>
+          <!-- .copyright-section -->
         </div>
-        <!-- .container -->
       </div>
-      <!-- .copyright-section -->
     </footer>
     <!-- .footer -->
-
   </div>
   <!-- #main-wrapper -->
 
