--- a/privacy/index.html
+++ b/privacy/index.html
@@ -131,7 +131,7 @@
                 <h3>Google Analyticsやその他解析ツールの利用</h3>
                 <p>
                     当ウェブサイトでは、利用者の利用状況を把握するためにGoogleによるアクセス解析ツール「Google Analytics」やその他解析ツール使用しています。このGoogle
-                    Analyticsやその他解析ツールはデータの収集のためにCookieを使用しています。このデータは匿名で収集されており、個人を特定するものではありません。<br>
+                    Analyticsやその他解析ツールはデータの収集のためにCookieを使用しています。このデータは匿名で収集されており、個人を特定するものではありません。
                     この機能はお使いのブラウザの設定からCookieを無効にすることで収集を拒否することができます。<br>
                     Google Analyticsの詳細に関しては <a
                         href="http://www.google.com/analytics/">http://www.google.com/analytics/</a> をご確認ください。</p>
