modify some sentences

--- a/privacy/index.html
+++ b/privacy/index.html
@@ -126,8 +126,7 @@
                 <p>「個人情報」とは、個人情報保護法における「個人情報」を指すものとし、生存する個人に関する情報であって、当該情報に含まれる氏名、生年月日、住所、電話番号、連絡先その他の記述等により特定の個人を識別できる情報及び容貌、指紋、声紋にかかるデータ、及び健康保険証の保険者番号などの当該情報単体から特定の個人を識別できる情報（個人識別情報）を指します。
                 </p>
                 <h3>個人情報の利用目的</h3>
-                <p>本ウェブサイトでは、利用者からの参加申し込みやお問い合わせ時に、お名前、メールアドレス、電話番号等の個人情報をご登録いただく場合がございますが、これらの個人情報はご提供いただく際の目的以外では利用いたしません。利用者からお預かりした個人情報は、滝沢ハッカソン運営委員会からのご連絡やご質問に対する回答として、電子メールの送付時などに利用いたします。
-                </p>
+                <p>本ウェブサイトでは、利用者からの参加申し込みやお問い合わせ時に、お名前、メールアドレス、電話番号等の個人情報をご登録いただく場合がございますが、これらの個人情報はご提供いただく際の目的以外では利用いたしません。</p>
                 <h3>Google Analyticsやその他解析ツールの利用</h3>
                 <p>
                     当ウェブサイトでは、利用者の利用状況を把握するためにGoogleによるアクセス解析ツール「Google Analytics」やその他解析ツール使用しています。このGoogle
