add reason for providing personal information

--- a/privacy/index.html
+++ b/privacy/index.html
@@ -139,6 +139,7 @@
                 <p>滝沢ハッカソン運営委員会は、利用者よりお預かりした個人情報を適切に管理し、次のいずれかに該当する場合を除き、個人情報を第三者に開示しません。</p>
                 <ul>
                     <li>利用者の同意がある場合</li>
+                    <li>利用者に企業賞の副賞を贈呈するために、スポンサー企業に対して利用者の連絡先情報（お名前、メールアドレス、電話番号等）を提供する場合</li>
                     <li>利用者が希望されるサービスを行なうために、当団体が業務を委託する業者に対して開示する場合</li>
                     <li>法令に基づき開示することが必要である場合</li>
                 </ul>
