automatically update the year indication on the copyright info

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
   <link rel="stylesheet" type="text/css" href="https://cdn.mlkcca.com/chatsupport.min.css" />
 
   <!-- Style CSS -->
-  <link href="/css/style.css?20170719" rel="stylesheet" />
+  <link href="/css/style.css?202401052343" rel="stylesheet" />
   <link href="/css/customize.css" rel="stylesheet" />
   <link href="/css/top.css?202311212332" rel="stylesheet" />
 
@@ -598,7 +598,7 @@
         <!-- .links-section -->
         <div class="copyright-section">
           <div class="copytext">
-            &copy; 2023 滝沢ハッカソン運営委員会 | Design by <a href="https://uicookies.com">uiCookies</a> and modify by <a
+            &copy; <span id="copyright-year"></span> 滝沢ハッカソン運営委員会 | Design by <a href="https://uicookies.com">uiCookies</a> and modify by <a
               href="https://github.com/rkonno">rkonno</a>
           </div>
         </div>
@@ -644,7 +644,6 @@
   <!-- countdown.js -->
   <script src="/js/countdown_ver5.js"></script>
 
-  <!--<script src="/js/one-page-nav.js"></script>-->
   <script src="/js/scripts.js"></script>
 </body>
 
