--- a/privacy/index.html
+++ b/privacy/index.html
@@ -167,7 +167,7 @@
                 <!-- .links-section -->
                 <div class="copyright-section">
                   <div class="copytext">
-                    &copy; 2023 滝沢ハッカソン運営委員会 | Design by <a href="https://uicookies.com">uiCookies</a> and modify by <a
+                    &copy; <span id="copyright-year"></span> 滝沢ハッカソン運営委員会 | Design by <a href="https://uicookies.com">uiCookies</a> and modify by <a
                       href="https://github.com/rkonno">rkonno</a>
                   </div>
                 </div>
