スポンサーページのリンクを追加

--- a/about/index.html
+++ b/about/index.html
@@ -105,8 +105,8 @@
             <ul class="nav navbar-nav">
               <!-- Hidden li included to remove active class from about link when scrolled up past about section -->
               <li class="hidden"><a href="#page-top"></a></li>
-              <li><a href="/">HOME</a></li>
               <li><a href="/#section-faq-position">初めて参加される方へ</a></li>
+              <li><a href="/sponsorship/">スポンサー募集</a><li>
               <li><a href="/about/">ABOUT</a></li>
               <li><a href="/team/">TEAM</a></li>
             </ul>
