--- a/index.html
+++ b/index.html
@@ -108,8 +108,8 @@
           <!-- Collect the nav links, forms, and other content for toggling -->
           <div class="collapse navbar-collapse navbar-right navbar-main-collapse">
             <ul class="nav navbar-nav">
-              <li><a href="/">HOME</a></li>
               <li><a href="/#section-faq-position">初めて参加される方へ</a></li>
+              <li><a href="/sponsorship/">スポンサー募集</a><li>
               <li><a href="/about/">ABOUT</a></li>
               <li><a href="/team/">TEAM</a></li>
             </ul>
