これまでの開催実績に関連リンクを追加

--- a/sponsorship/index.html
+++ b/sponsorship/index.html
@@ -161,6 +161,7 @@
                 <h3>Takizawa Hackathonについて</h3>
                 <p>Takizawa Hackathon は、岩手県内のものづくりに興味のある学生が集い、数名のチームを結成し、数日間かけて新しいサービスをゼロから生み出すことをコンセプトとしたハッカソンイベントです。<br/>岩手県立大学のOBや現役学生によって編成された運営チームにより、2016年より継続的に回を重ねてきました。</p>
                 <p>今後も定期的にイベントを開催し、学生同士がものづくりへの思いを共有し、創造的なアイデアをかたちにしながら、共に学び合い、切磋琢磨できる場を提供していきたいと考えています。</p>
+                <p>過去の開催の様子は、<a href="https://www.flickr.com/photos/157754753@N02/albums/72177720312765208">こちら</a> からご覧ください。</p>
                 <h3>次回イベントの概要</h3>
                 <ul>
                     <li>開催日時: 2024年6月29日(土)〜30日（日）</li>
@@ -176,6 +177,12 @@
                             <li>テーマ: 知る人ぞ知る</li>
                             <li>参加人数: 20名程度</li>
                             <li>開催場所: 滝沢市IPU第2イノベーションセンター</li>
+                            <li>
+                                <a class="sponsorship-link" href="https://www.facebook.com/events/202342693527634/">
+                                    Facebookイベントページ
+                                    <i class="fa fa-external-link" aria-hidden="true"></i>
+                                </a>
+                            </li>
                         </ul>
                     </li>
                     <li>
@@ -184,6 +191,12 @@
                             <li>テーマ: 尖ったプロダクトで相手のこころを変える</li>
                             <li>参加人数: 10名程度</li>
                             <li>開催場所: 滝沢市IPU第2イノベーションセンター</li>
+                            <li>
+                                <a class="sponsorship-link" href="https://www.facebook.com/events/206098249794623/">
+                                    Facebookイベントページ
+                                    <i class="fa fa-external-link" aria-hidden="true"></i>
+                                </a>
+                            </li>
                         </ul>
                     </li>
                     <li>
@@ -193,6 +206,17 @@
                             <li>参加人数: 20名程度</li>
                             <li>開催場所: 滝沢市IPU第2イノベーションセンター</li>
                             <li>協賛: オズビジョン様, M5Trees 松森木工所様, eye2→weave様, 株式会社クーシー様</li>
+                            <li>
+                                <a class="sponsorship-link" href="https://www.facebook.com/events/1906125736343140">
+                                    Facebookイベントページ
+                                    <i class="fa fa-external-link" aria-hidden="true"></i>
+                                </a>
+                                <br/>
+                                <a class="sponsorship-link" href="/tracks/ver3.html">
+                                    Ver.3のホームページ
+                                    <i class="fa fa-external-link" aria-hidden="true"></i>
+                                </a>
+                            </li>
                         </ul>
                     </li>
                     <li>
@@ -201,6 +225,12 @@
                             <li>テーマ: デート x ○○</li>
                             <li>参加人数: 15名程度</li>
                             <li>開催場所: 滝沢市IPU第2イノベーションセンター</li>
+                            <li>
+                                <a class="sponsorship-link" href="https://takizawahackathon.connpass.com/event/68601/">
+                                    connpassイベントページ
+                                    <i class="fa fa-external-link" aria-hidden="true"></i>
+                                </a>
+                            </li>
                         </ul>
                     </li>
                     <li>
@@ -210,6 +240,12 @@
                             <li>参加人数: 15名程度</li>
                             <li>開催場所: 岩手県立大学 滝沢キャンパス</li>
                             <li>協賛: 株式会社サイバーエージェント様, パスカリアグループ様, 株式会社NOWMO様, チームyurue様</li>
+                            <li>
+                                <a class="sponsorship-link" href="https://takizawahackathon.connpass.com/event/302430/">
+                                    connpassイベントページ
+                                    <i class="fa fa-external-link" aria-hidden="true"></i>
+                                </a>
+                            </li>
                         </ul>
                     </li>
                 </ul>
