紹介文を一部更新

--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
               <strong>Takizawa Hackathon</strong>は、岩手県の学生が集い、仲間と楽しみながらワクワクするような新しいものを生みだすハッカソンコミュニティです。
             </p>
             <p class="lead">
-              Ver.6のテーマは<strong>「学生生活をより良くする！」</strong>。それぞれ新たな一年をスタートさせ、初夏を感じ始める季節にぴったりなハッカソンイベントを開催します。
+              Ver.6のテーマは<strong>「学生生活をより良くする！」</strong>。新年度を迎え、それぞれ新しい一年のスタートを切り、初夏を感じ始める季節にぴったりなハッカソンイベントを開催します。
               新たに出会った仲間とチームを組み、学生生活をより豊かにする新たなアイデアを考え、テクノロジーを用いて実現するワクワクする二日間を過ごしましょう！
             </p>
           </div>
