--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
         </div>
       </div>
       <div class="content content-two">
-        <!-- <div class="event-date"></div> -->
+        <div class="event-date"></div>
         <nav class="event-share-nav">
           <ul class="nav">
             <li>
