ヘッダー部分を別のHTMLファイルに分割し、共通テンプレート化しました

--- a/index.html
+++ b/index.html
@@ -1,3 +1,6 @@
+---
+---
+
 <!DOCTYPE html>
 <html>
 
@@ -75,41 +78,7 @@
       </div>
     </div>
 
-    <header class="header">
-      <!-- Navigation -->
-      <nav class="navbar main-menu" role="navigation">
-        <div class="container">
-          <div class="navbar-header">
-            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-main-collapse">
-              <span class="sr-only">Toggle navigation</span>
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-            </button>
-            <a class="navbar-brand page-scroll" href="#page-top">
-              <svg class="navbar-brand-svg">
-                <use xlink:href="#logo" />
-              </svg>
-            </a>
-          </div>
-
-          <!-- Collect the nav links, forms, and other content for toggling -->
-          <div class="collapse navbar-collapse navbar-right navbar-main-collapse">
-            <ul class="nav navbar-nav">
-              <li><a href="/#section-faq-position">初めて参加される方へ</a></li>
-              <li><a href="/sponsorship/">スポンサー募集</a><li>
-              <li><a href="/about/">ABOUT</a></li>
-              <li><a href="/team/">TEAM</a></li>
-            </ul>
-          </div>
-          <!-- /.navbar-collapse -->
-        </div>
-        <!-- /.container -->
-      </nav>
-
-      <!-- .nav -->
-
-    </header>
+    {% include header.html %}
 
     <div class="orig-jumbotron" id="background-particles">
       <div class="content content-one">
