--- a/index.html
+++ b/index.html
@@ -551,23 +551,7 @@
     </div>
   </section>
 
-  <footer class="footer">
-    <div class="container-fluid">
-      <div class="links-section">
-          <a href="/privacy/">プライバシーポリシー</a>
-        </div>
-        <!-- .links-section -->
-        <div class="copyright-section">
-          <div class="copytext">
-            &copy; <span id="copyright-year"></span> 滝沢ハッカソン運営委員会 | Design by <a href="https://uicookies.com">uiCookies</a> and modify by <a
-              href="https://github.com/rkonno">rkonno</a>
-          </div>
-        </div>
-        <!-- .copyright-section -->
-      </div>
-    </div>
-  </footer>
-  <!-- .footer -->
+  {% include footer.html %}
 
   </div>
   <!-- #main-wrapper -->
