運営チームメンバーのプロフィールを個別ファイルに分割し、_includesディレクトリにテンプレートを追加

--- a/team/index.html
+++ b/team/index.html
@@ -8,108 +8,9 @@ custom_css: "/css/team_profile.css?202311191800"
 <article class="our-team-section">
   <div class="container our-team">
     <div class="row">
-      <div class="col-xs-12 col-sm-6 col-md-3">
-        <div class="at-user">
-          <div class="at-user__avatar">
-            <img src="/img/t-sasaki.jpeg" />
-          </div>
-          <div class="at-user__name">Tomohiro Sasaki</div>
-          <div class="at-user__name_jp">佐々木 知洋</div>
-          <div class="at-user__sns-items">
-            <a href="https://twitter.com/t_ssksan" target="_blank" class="at-user__sns-item">
-              <img src="/img/logo_x.png" class="at-user__sns-item_x" />
-            </a>
-            <a href="https://www.facebook.com/sasakitomohiro.sasakisan/" target="_blank" class="at-user__sns-item">
-              <img src="/img/logo_facebook.png" class="at-user__sns-item_facebook" />
-            </a>
-            <a href="https://github.com/sasakitomohiro" target="_blank" class="at-user__sns-item">
-              <img src="/img/logo_github.png" class="at-user__sns-item_github" />
-            </a>
-          </div>
-          <div class="at-user__bio">
-            2020年に岩手県立大学を卒業後、株式会社サイバーエージェントに新卒で入社。
-            Android・Flutterエンジニアとして既存・新規サービス開発に従事。
-            趣味は、ドライブ、映画鑑賞。
-          </div>
-        </div>
-      </div>
-      <div class="col-xs-12 col-sm-6 col-md-3">
-        <div class="at-user">
-          <div class="at-user__avatar">
-            <img src="/img/r-konno.jpg" />
-          </div>
-          <div class="at-user__name">Ryota Konno</div>
-          <div class="at-user__name_jp">今野 遼太</div>
-          <div class="at-user__sns-items">
-            <a href="https://twitter.com/rkonnr" target="_blank" class="at-user__sns-item">
-              <img src="/img/logo_x.png" class="at-user__sns-item_x" />
-            </a>
-            <a href="https://www.facebook.com/rkonno/" target="_blank" class="at-user__sns-item">
-              <img src="/img/logo_facebook.png" class="at-user__sns-item_facebook" />
-            </a>
-            <a href="https://github.com/rkonno" target="_blank" class="at-user__sns-item">
-              <img src="/img/logo_github.png" class="at-user__sns-item_github" />
-            </a>
-          </div>
-          <div class="at-user__bio">
-            2018年に岩手県立大学を卒業後、サイボウズ株式会社に新卒で入社。
-            モバイルエンジニアとして5年ほどグループウェア事業のプロダクト開発に携わる。
-            現在は同事業のプロダクトマネージャーとして従事。
-            趣味は、ドライブ、キャンプ、コーヒー。
-          </div>
-        </div>
-      </div>
-      <div class="col-xs-12 col-sm-6 col-md-3">
-        <div class="at-user">
-          <div class="at-user__avatar">
-            <img src="/img/h-kamada.jpeg" />
-          </div>
-          <div class="at-user__name">Hiromasa Kamada</div>
-          <div class="at-user__name_jp">鎌田 啓雅</div>
-          <div class="at-user__sns-items">
-            <a href="https://twitter.com/h_kamada06" target="_blank" class="at-user__sns-item">
-              <img src="/img/logo_x.png" class="at-user__sns-item_x" />
-            </a>
-            <a href="https://www.facebook.com/kamada.hiromasa/" target="_blank" class="at-user__sns-item">
-              <img src="/img/logo_facebook.png" class="at-user__sns-item_facebook" />
-            </a>
-            <a href="https://github.com/mattyan06" target="_blank" class="at-user__sns-item">
-              <img src="/img/logo_github.png" class="at-user__sns-item_github" />
-            </a>
-          </div>
-          <div class="at-user__bio">
-            2017年に岩手県立大学を卒業後、株式会社オズビジョンに新卒で入社。
-            SREチームに配属、AWS運営などインフラ周りの業務を担当。
-            2年目からは自社サービスのフロントやAPI、ネイティブアプリの作成・改修に従事。
-            現在はフリーランスとして働く一方で、「教育課題の解決」を目的に仲間と創業した会社にてCTOを兼務。
-            趣味はキャンプ、コーヒー。
-          </div>
-        </div>
-      </div>
-      <div class="col-xs-12 col-sm-6 col-md-3">
-        <div class="at-user">
-          <div class="at-user__avatar"><img src="/img/y-sato.jpg" /></div>
-          <div class="at-user__name">Yuya Sato</div>
-          <div class="at-user__name_jp">佐藤 佑哉</div>
-          <div class="at-user__sns-items">
-            <a href="https://twitter.com/yuyuya0203" target="_blank" class="at-user__sns-item">
-              <img src="/img/logo_x.png" class="at-user__sns-item_x" />
-            </a>
-            <a href="https://www.facebook.com/yuyuya0203/" target="_blank" class="at-user__sns-item">
-              <img src="/img/logo_facebook.png" class="at-user__sns-item_facebook" />
-            </a>
-            <a href="https://github.com/dao0203" target="_blank" class="at-user__sns-item">
-              <img src="/img/logo_github.png" class="at-user__sns-item_github" />
-            </a>
-          </div>
-          <div class="at-user__bio">
-            2021年に岩手県立大学に入学し、現在は3年生。
-            FlutterとKotlinなどのモバイルファーストな技術に触れて活動中。
-            現在は東北TECH道場にてAndroidモバイルアプリ団体を運営している。
-            趣味は、筋トレ、カラオケ、食べること。
-          </div>
-        </div>
-      </div>
+      {% for member in site.team_members %}
+        {{ member.content }}
+      {% endfor %}
     </div>
   </div>
 </article>
